--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ ipykernel==5.1.0
 ipython==5.0.0
 ipython-genutils==0.2.0
 ipywidgets==7.4.2
-Jinja2==2.10
+Jinja2==2.10.1
 jsonschema==3.0.1
 jupyter==1.0.0
 jupyter-client==5.2.4
@@ -23,7 +23,7 @@ matplotlib==3.1.0
 mistune==0.8.4
 nbconvert==5.4.1
 nbformat==4.4.0
-notebook==5.7.4
+notebook==5.7.8
 numpy==1.16.4
 pandas==0.24.1
 pandocfilters==1.4.2
@@ -36,7 +36,7 @@ pyrsistent==0.14.11
 python-dateutil==2.8.0
 pytz==2018.9
 pywinpty==0.5.5
-PyYAML==3.13
+PyYAML==4.2b1
 pyzmq==18.0.0
 qtconsole==4.4.3
 scipy==1.2.1
