--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ pyrsistent==0.14.11
 python-dateutil==2.8.0
 pytz==2018.9
 pywinpty==0.5.5
-PyYAML==4.2b1
+PyYAML==5.1.1
 pyzmq==18.0.0
 qtconsole==4.4.3
 scipy==1.2.1
